fix plex volsync config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,43 +1,44 @@
-#ENC[AES256_GCM,data:oPNWI2vzlAJ/AxPrXD/O2Xdj84mN5Pd+6ULScwNnR11o2QrJdSdkj5bM9CRl5VC42q5EicAXd6dPW9Wt4H+itF4=,iv:nkhN6VlZGA/OQ+51NVoKED15I2qjaaV5KOqIF8dXINU=,tag:ffURUNaqnXz4XbyVQwyupg==,type:comment]
-#ENC[AES256_GCM,data:1TXGmhlIMbh0WKJvQ11h/zUhTxnnVN58BCBp535sFe5QUHVsl8TxhRpMZSk=,iv:rYFZlEmRf/o7DicVE//4u7YogVwRpQt0McqXSNqDb6w=,tag:CwFxRcuH4gF1l/WC8C806Q==,type:comment]
-VIP: ENC[AES256_GCM,data:Y3uyeomdm3HHz2xztQ==,iv:bopZYmmUe9yUMwPQCbzW7/UAr/Ncm97el79lK9Qcxi0=,tag:vnOZWoE3SjuM6Iahph/iyg==,type:str]
-#ENC[AES256_GCM,data:grkYNRzfxV44zCEyWVIc8aIL99dQQuThvkPB,iv:ZBb7wN4/Jc9k4iothaVxl/G3E2At2dkBXaGGceKSpuw=,tag:NC9I1Y6FTvg2/5bLcDEZjQ==,type:comment]
-#ENC[AES256_GCM,data:t5aj0fO6zBU4fzwVutiycVdO2sYWVunrBkF/Vq30pMbPolGwQ714fRj90Tz6BuwaA/TUER60gchOspDLgrCiNrAw96eLlKlacLJqlsv0Q5Lf23HWs73DWpQ=,iv:lftuaFhOIIIGGbKhkttGM41iP+KcVBQCIUDRay8jzmA=,tag:kh1un5MBVJDGeLjT2jcePg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:rHquiolxmeyfGmUBZsw=,iv:KUocAPtib0sY6icGIZaA20K4v21ld53wKNPhBqxV9O0=,tag:uqy5TemSWU9eUgZh4GRIVA==,type:str]
-#ENC[AES256_GCM,data:XSx4xV6MggxqDeSb5jeo9GqH5SIZ1CH6Dc1J3G2B3qbl8g==,iv:cMAG91rlNin0eGGz+zq2Se7T3RBHO+pmnyWf5WOyXNI=,tag:mBCaPprrq3Uol/ghB6cp3g==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:vKsuDDQRJgwjw4RxWA==,iv:pH8OYhUP9r8U3N/2e2yOfhbZIo4cROCWVaO+LZ75EO8=,tag:8ES4aSDuRep4m90ne1SR2Q==,type:str]
-#ENC[AES256_GCM,data:BYujWj0Dv81cmWhuJ4tgiE76KXRI1fG+gV3uQ95la82vvQRwYiAJSxYAu1w11aQ=,iv:KNKsg6H0kgoJQu+3Bop6bxEqdzj9muk1FzZKA6lrcxk=,tag:ARa1+Y0QG3lry50NNkc+oA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:zkETJguAeQwifRPJrMLGFc8FczpUjPanOA2+WL1HYQ==,iv:kiDtxQ1JkaQauD2oI/GvU9Qof+f/kpGgkZ2XcJ8teUA=,tag:xWt1lQBfyXE4SgTGiHaezA==,type:str]
-#ENC[AES256_GCM,data:thVhusHUW978i2ZuiN0Uy8k4O+zVqIjg/Qwd/O3V7+H8oOeV+g7LV42W0mpTp5l584iYohBrtLHK8V4lN0r1fc8AKU04ft5fynmpqEZZO48ShQ==,iv:e8o7DREL3MqJDNNdDABm7VPidni6u8cPiCwKi7y2N6U=,tag:ICY7J11dcjBXtfoPezZ1fA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Vmm9KpI89qgK5g8JhQc1,iv:mpNExb2p04J2oHYA2IKSN6te6sjp2sb7+iTK+svYALk=,tag:+ugnbxg9xyBw8cU7aGbKjA==,type:str]
-#ENC[AES256_GCM,data:FmeGOmvNDC1vA88j4WYpnkOPCpt74fT7cbqlvtDiQpRS,iv:d2iApyyMLkvX/RhXd7ZwNFgzFKpEC1mh1mC+L2hBB9o=,tag:MZEm2rZXmRmiB2360EdOug==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:wcD50azKmi0AeshMxn6F,iv:A6DgJPd13SdO5j5qKNpUPL60ikuykPCBprzXHClqTfw=,tag:Ga6cozN2BmESr/PLhkXKyQ==,type:str]
-#ENC[AES256_GCM,data:QMbwXdkdQs0sXli41YDSmc1zPoto92OzoDdqoHO0czbGE9EQryiASj+j1RdapTmMd2JlNU3/GoRunTUUoUuH2TrcFm+0A1Ah6zoufZzrDuc=,iv:WO4gj4obuktNWqgfpSSCHxiKYyCy3IA+0Avi5EoLezc=,tag:N8lGlzbDusb42w0BYV+l9A==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:Y5izJA8q54/MfCJeYQZE,iv:gZ8n+fKt8fKc5rfVZHr2tFZnko1FyPLOvTuho4IcfoU=,tag:0PKPSg9V0XqSgZ/ll6k5zQ==,type:str]
-#ENC[AES256_GCM,data:Stji4Y/cjN41vH5t3UlBD77yKvBtHnYyyH9H2QeupOwVNwWQ9o3MJgnqpNF2jZLW6QntS80dqNE9RGJ5zfQ15zh2vc9oIj1jkBEeDT4kfUUVZypB7yGB,iv:mZPvhvmxbhVBed6jKwizIVPPum4UwocGbh1v2UdEFfU=,tag:tfOEwvAADug6+nhf/H8IRQ==,type:comment]
-#ENC[AES256_GCM,data:zU+L8miuGTA6S25TBywIV7C1d0QM09LjGC0gOmY4WPNPc21287JLXfrId2G2dFqfhVKGrWqSXtbcfIccAhEf0MBznHb9263KOnAv249R8l2IeYjiCAVxapvc+hhFecGpH1FQ7f6t59gWhpn1/gHpIFjXKUYBVsog3Ve5xQ==,iv:vvdVDiKz9/V1cKVtI6ZsF3VD+M+ALxjMMEeo31nh+v4=,tag:981lJd3MaRPmaUDp2//WnA==,type:comment]
-#ENC[AES256_GCM,data:D+Fxdpxgtsig6H6i+ZF/QpMCq4y93HbGlQXe1ksxmPbxl+sWusES9PFbslToxe/rw3bZ53dRT6q00n3uRipEt9IB8uBoHG3nP113V0xiV3I=,iv:PkpQTT2B8QdvZigYH3QKKGgfSBdljvq+6mf9GLswKc0=,tag:yJiK8p/lEozRFO8gJ9YuKw==,type:comment]
-#ENC[AES256_GCM,data:IR5FHFbGmV3Xc4h2qNUIWB4lGO8GL4EYxYrujrwZWxKo+cb4xY6Vu1+z2liPEFjbucvwnE5O,iv:nXEF1YocKePOK5OF+7+KQbXtvX6i1srBNSk6haOHnJc=,tag:Gioao4zg3B2f+HbbDfAl3w==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:K5unTqdiKVSXsHzD,iv:Bd1QkOBLVB+dRdDwm8INEAVd7uVnGUeY9fKO/NFY7tc=,tag:Z9TW03vZMuuwBWodHJlFAg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4nF9cXk+Bo7ip9WAh1aLYQM=,iv:e6bwQ2ZnD2D0AoycTdQtGWPhlLj5hX4T1POnfLoP8IE=,tag:5STkowa7FYpi2rcKA/m01w==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:p52Jax1OrvpU42ZFxqldlkfC/I+Xy/O7BFR0LnLBNhs=,iv:1Ae+R5fL0otgoK2shZcNV1gcmNUvkywrlHMHr1sNucs=,tag:14KUO0RHcX4h8pKOoFDj3w==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:VcJgHf16AHvRwn/r4yBsb0CWf592oqD1OvMA0aXUaDu19WDJy7X4rg==,iv:fChnxc8CaFw3m1slhdwMRaY0EM90u1gUFH/Eex4eAc0=,tag:1Y1SKoDxHYNAMEV4qmhs3w==,type:str]
-#ENC[AES256_GCM,data:FQzavAL7rQQaBOt26UjblxxqNqBPrwHj9Q/oRlLuE0TmvHaORN7e3osRNvo/A798KInbmvuWiaNa1gXcC7xJig==,iv:R5OTNW6qlLJAWSN1jYBe/43EGTXQX0M0j6e+tguTzgs=,tag:iwGESVn2R8vzjqtYz2XUwQ==,type:comment]
-#ENC[AES256_GCM,data:zkZ8ILM0ncH6shy0PsKjFLF6fhtD0SSJ6MJYggzfBfq4IwiyX9LafgiG/+rSTDd/JMlU8t7Nb+I=,iv:2a6osd3uV6JX5VHKho1t+EttLX1Q6V+Jo6IZ5R2AN+4=,tag:B3fSNSqiZ2nPTxj0B5FiAQ==,type:comment]
-#ENC[AES256_GCM,data:SLg2zi+5+yHZZr+byPek/DpE3DamHBI26Q==,iv:NxlQDZFwiRYfJOgDdzG1xZBDMHhxqeymSs5YWvYejBU=,tag:wDz66zdRszIuv7je9WDoKQ==,type:comment]
-#ENC[AES256_GCM,data:4Q4tsV34j6Bq5cf4ClU5jkjXdXTnLrkdHHGTw/VV/rwhFAiUfhFss6bOv0HBiqy7hAhOuGnd1EDCjmI4eDvpn8F2JRlxXwaBRHEko4E=,iv:7i6g/UbjXOARg5Mmd/u+krWAEEnN5DdTwNdSSnopHx4=,tag:X3k0vtmwGZuajQ/y/LR6Sg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:ubQyF77ccba9VcA+nWRAwpyMAkrljcqgUwCn/4KhU+IVzbS3WtY01iue4pzrgBjj,iv:WhMBhv2PR/rXIuakhiqG0xJkadMmAMD00wMp2PxQ+5k=,tag:o+9WNcOZTuwpu/5A/ZDGXA==,type:str]
-#ENC[AES256_GCM,data:WtFYKpspjslFNJSHYwdePwHitFk3V93TPG7BUVfRA3zHw5V4NUjVg/TOtb8BfEFONMHDT+FCplmoLBTzjfQVuiKjcLWzcno=,iv:/ypEQSry6N8/TJSiBnjileo5KkBSF41NrUtwJir/1go=,tag:l+JoyzLfl5KbW2lB8vXcyg==,type:comment]
-#ENC[AES256_GCM,data:4Fk/myW2oS5Hkt/lbkILLQ+Wfn2G3sIDd4l0h3RtE8P8w7Xbyb3RmfIUFLlhfe6NqcxBVGq7,iv:AaYV1hv/Eiz5Zou4+g4mRgOdNCQgEmfGR6Hwiy++k6g=,tag:uwJwr7Z44GKsXJaw1/hCfw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:wLQ5izqxhA==,iv:XzhZod0ok2KQskzatBw4LP7yKJm2uizZQSxBu930TK0=,tag:7x4xJkyRr71Tw4Z355LWdw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:T+xocgRouiHGaLvziqQpu8GMets=,iv:fZUm94wBORB1EewpwgMRCGYYrTr6dSaMkCL8s579ACw=,tag:8+nR85GsqZV4l0pIWhcg5Q==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:Rz1ZPj0L/B0pL2U=,iv:LrHaf18FHYzsOUKsoS/D2IMrpFL2omVoT2y4210TUuE=,tag:yOM+FeofRRLkzz0z1NY1Gw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:zER9kuqNxbc/0TTSDGdG,iv:kVI+CGDaCyV7c0CeFZuBET+lrObyAYsXlf4IohXmAcE=,tag:0XdluGIM1ESZbVNkMsm6Mg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sXNnb5NoRMnFN4CnYWKx0v0pF4XaGOvdMg==,iv:OuXgkA0e8V/vgq7viJpw9/mXtdiJWkroT+yoSu/n060=,tag:D4DCvavYBIrszweSmHiX1A==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:R61Cw8GVFQMGBSBKxt6slLlOm1q7aRt5,iv:QkMG4I1pidLhwTa1lAyoWF8HBhVvSKjk+UCJkMBNNYg=,tag:idWVnshCnZcVslZTs0n2iQ==,type:str]
-#ENC[AES256_GCM,data:8MEui3JZKEaCo8k9vio=,iv:0E53We5HxECc0UAx02xvjYH6rT1gM+6yaKaPSyGVSyA=,tag:69H617PP8Jh4O993KeuIfQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:3lJ3Y/D392NFgx5rig==,iv:Zv2jCsGMZWtdx+gnTCc1uQlojVYgrtSxleJ7Y11Ehys=,tag:1xAhjwibHVwcbLoeg6+U7w==,type:str]
-SVCNET: ENC[AES256_GCM,data:Dcim+PjFeC4/WUae8A==,iv:bHdOmki/7ah53on6XZ0gUlLoy2EJYxI8fRY49wUjJ9M=,tag:1n+bAy/TXSxdW2pNwMVHJw==,type:str]
+#ENC[AES256_GCM,data:T/UVCTHgNBZqXcNNpYJyl4aGzNDu5dOU5wlx3zmGP6Ch+2L2BHOhfrrpKoftNwbixc6jjioh06kfIExdWvbjNEA=,iv:TWodZsPg0J68q+037W4Zs24Ktbjng43gzplTdIjbMLw=,tag:E6ZlisASzUZuEH30yHvF9g==,type:comment]
+#ENC[AES256_GCM,data:L1nWjsMqzdx6aJ0pqzC5miRdboDNkHs7mVnkghvbgouCFyjfHz51q/lAuiI=,iv:4sRkVQs89A+rWdQ7n9wZSozBYIns861wD0CDysBC3Fw=,tag:EC++/yTHMogkMf1vypmuQA==,type:comment]
+VIP: ENC[AES256_GCM,data:T5eZRvg+rRQP3IEbvA==,iv:u4hOucNReMlzJ3nJ3m2yBZxT3jWjlEFXKSTd0in+6Ko=,tag:52UG9jGhdIlotfO+BvkYvQ==,type:str]
+#ENC[AES256_GCM,data:9AATIvBO/uyosZfxOeDJlA1LyAoPaWyFwZ0G,iv:/SXlYSRSbgN/oPZ208PdnG+eaw73Z+fKGWkyN6a+WVQ=,tag:rmiOjEfp1h+9WngePXGS1w==,type:comment]
+#ENC[AES256_GCM,data:HXWAPjdoSTe4jVer3XQvE8WCM6m7zzVSuTYDmqr6W/bpJ2t0UTkYjJVhhz6Xtd7JBSs1K/OEwm5He9aynqJmM8Fs9Yi4smYNJJAFtD7JUERuOI5FOYjE72E=,iv:P2bzTyNBmp2imUmMOQtP2zrmpQacJJzNB0ULrNA+hv0=,tag:sOF9ZM8E2GhOviPeugAlSg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:jc6iS2RUZWXvGT6DFKM=,iv:iwEMms5zpeVqGXwXPn5gPa32yV8FwuTISeyY4gfSfSg=,tag:0EkhnSVA7EznL++9GvmLJw==,type:str]
+#ENC[AES256_GCM,data:JJP4fBNyTZaTibELjGynep6JvnFhEZeBV4WAdFNkpz/IFw==,iv:ZXmfdSMmFbgWVp6QMjtQ+LlCe/PeDGkrDkXZG6Bu6dQ=,tag:lTEkSEDfrKCmNWMNQYuC4Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:Jt5Y1Q2xcbQvFt9gZg==,iv:qYkf+4s75LW9eP6newrX2Is9Yj6gWeuuRtpbp013r0g=,tag:9hRXcRQprPe9H+FqI23L+w==,type:str]
+#ENC[AES256_GCM,data:EPOdUJNSqdt8l46gDX45xhNMfjVW6hz55d8z7kBGA1iyWrpBExIK26sgKZ67wak=,iv:VsZWcF6XxSspSuZr6a3Qi3J3iL12pmmTtKVoPAwqol0=,tag:cV0kvBmM8biQ9mKwcxoKLw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:Rc1pq+ooIRuvs1dvcrWCy4fbWDs/476qXQi6e10Q7A==,iv:IrG+kogq/tS5rfiX3ZmQN8ihGvlhrJHyB1S7gG96dso=,tag:fpazUCIpvlp8ngCn7Bxhfw==,type:str]
+#ENC[AES256_GCM,data:QO1kT3j9nKtZoW8l8R4kI8RGFeVFSs4WufYwcai0BYlrHjXzc09pQbvKFGnHkYB0P29o1WK1OnXJa2LJwZiuMIwEyxdQxUmr8WDOKxjWVWn9Zg==,iv:kGzVDatgb53IyVU1bQYcJNhIa5V3RorHQPAj96cQFcs=,tag:Po3JnfM3aMZbAvrszq4DUQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:Fz3LP8tw40gVLyAhvDH+,iv:Bw/c0xuOeUlLREQfRXRMyyPDVvSxzwf0a7RNn4RRW/8=,tag:ApWIaKcs7Zo9OkWwlMCBpw==,type:str]
+#ENC[AES256_GCM,data:4/XYVdLM6d6wx/hCfa0Unot2rglDxrh3u93caMJLf6RG,iv:UFt5IUaIRlSC0wIx6M0fVlyMFM//iDocJ56+JAjcR3I=,tag:ofEXdiy5b5vmSBvnSZwcgA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:ZD5BWlucurUQon0ee/Df,iv:n3w8A2nv2wkx/WGOSno/84r2s9wKZEcpi0AUK3hOx/k=,tag:m1ka4LdKHxkb2imeJvu3Tw==,type:str]
+#ENC[AES256_GCM,data:PsK7LV8CMtlpjl1OTj3VsvkrH/OxgwB9bNOaQNuq8qkd+eex037JwH17XlHO8y2jRbJJ90XozlxkjUsRjolbCi9Cpf+oBJ8dr9HJKKMrqys=,iv:NO2PsXGfHaqNxc46h856H0K5+/1lZB7Rf5Z4dHd05T4=,tag:v+fI/Gz/XnKq2HeKFSWJVw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:v9vEfpWN/zJorlna8jtF,iv:Yqm9PqEWLRJ9WNySe60U5WTYT9gX6zZFNiGUeeSAHko=,tag:NVqyKZJB2BVCVuCvi13rqg==,type:str]
+#ENC[AES256_GCM,data:u7i7+Qm9yP8aVbYvP23Yn8adWHFXr+PemQnnPAwn8Adih78rYT+uiF1kaK0ZecC2AoPyH80mc0F1TdBRGSOXGW3xTysa5BYtqxJjdsRaIFIwapoFPbfY,iv:ZLezJ9bQhuqrkhXvWpENVjxd2NYFSSwyknfyF18vTJg=,tag:jszf9QIjBu1Kl2f04kMBuw==,type:comment]
+#ENC[AES256_GCM,data:tMmXcGz9UdGqqOZktRJp/gMJUe2qjztkRzlLD6kJmJVkCtAshqjmldqh69Do2XB/Lx0j8FL+4TNtJGiSf0jEBshdcFjecib/ZkUSgZSxeh/K2boobN8GHxLOAaBK+n2vcxfFw5U4wKmUgitTAwWZ2Ru4DMrHMGMHhc0nuA==,iv:1Cy/goM9fI7NEZm9ipeMOVNrNZuZ3YT9DpHod474cBA=,tag:mQO6IPBnMpVEJk1+9+TiqQ==,type:comment]
+#ENC[AES256_GCM,data:jEx6Jq5iEuVeekLzSUbXvYuUOkosU36SQP8T2n2TvfkKmgpeQkGSP96VKmLs/QtvZ2acgrBiQ7/OXih7VtbrZYfHiX9JCwazHTn+LSJyLfM=,iv:7UP/ucxwBf7MGwI4HWemyzye0sJ50MzGSC1gwcKj41w=,tag:L5JKEFqRsGmu4NKUGwE31g==,type:comment]
+#ENC[AES256_GCM,data:kucC/tQoUEUGII9oG19JtgNqz42qhaR3vOQglB2x29xn3oUtCkPcCRePPeNvj/h8ZtfMiShB,iv:+AmQetVYArbE0ZHIpxCd5PqTjW3lqd0ojn2q1mddOSE=,tag:mlWNO6pkkBlwYuR8jHskBQ==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:MDKPYF0KfmaVAAja,iv:7QLF6jnCRY+oX9Z/tnpfG9MEs4oKah5b2Nbyw7N9LaI=,tag:mY3jXQ/onE3BYzUsuk9rgQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:PS4dhnWD+dRqo/Fqs013+fA=,iv:OoO9kw0Ib5jHdtg6kOZ0dg+ZvlELvrZJEdOFF6jjk/A=,tag:AcI1kbKDFcIc09skVdwqug==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:gMqC7Kgs2nmjEAOLwkOITTq5qisfEOBbQEQvhZ9XYFQ=,iv:9CxQ9KsqPzEQa5Yjtkb1mEf0e4iJVrys593Qt6EIxNQ=,tag:AWbUNfPFAN5aHJYoKo0jOw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:w1dOihNFTmpqvYZsgo0bRajsrNT+pxqWpt/MRpb0l++Quq9yaxczrw==,iv:I8+C3Ql/gtXYLS6VGthhKJYVQ7vegnMPz1CBGDT29UE=,tag:eKF8UphhQex864BS2tMtPQ==,type:str]
+#ENC[AES256_GCM,data:iI29Q+cIrUBXfflGCODac982srlbuep48742PGbNXOGD2Xnr3zCdpJEFB3YZP5D6TFrnujR88ek3b94rQ9ap1g==,iv:4B7sMdvRV0+cunVO2ydHI7CGHmlfASodTqzJ5x+0M7E=,tag:BJVo2q0OggeKaRL18OW2zw==,type:comment]
+#ENC[AES256_GCM,data:4gXPzfsEDihpHmuF0UZ77efxWoSShgB+MgPg+qn3+krSD/vazqI4IUbU5ykOU+h+4ZoQSVnHpAc=,iv:rh1Wc0/uJWpDrHIaZFuS8JUj3doyiaWyy35qDnwnv4g=,tag:axCc1JdZ6n5bQ2EzGF+f1Q==,type:comment]
+#ENC[AES256_GCM,data:CXha+EMu/rlKTV1R9XAM22t6/bgutAFYsA==,iv:9jhKhGr3jAv3SKBWgRpLBrIuRp+Df6Vslf7UU3nLSO4=,tag:WXRyPGpaTuUvziV48DdhVw==,type:comment]
+#ENC[AES256_GCM,data:fkpVV5hdmPdOjn6vxgJRB2I97utnuNjsctKLW8Kxijq94DQiJdkRSHr597E6sD2zc/M9RV5bV6l+8JvbSDFZEAeMRCdShX7b6JCiVLA=,iv:myS8LG0I28KiJZn5iM5F7hxksv+KW6cB/MIs+fEnjng=,tag:pzad8MTcRyi/kfV94tx8tg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:d44X8kkM++mu+Lz+CLKZvuBAB2RqymywO7BJrVVJicgzKks6ooRqrdT4keRqpnBg,iv:s7/YFL2QlfME8eOS3JaFxnsCV20t/3adBw/iDoTA3dk=,tag:XtEEOI3vHkcAosrOdH8eMA==,type:str]
+#ENC[AES256_GCM,data:JPngwc+t+Xuyj9Rzh789hxJ+3hNlwhP8z4lk14Rz0TwZlKA3lFUz/H9gurr72ekN6nNVO1Grz4nVprZNdUyMP/Wx+abe1qc=,iv:kAP2tmo/xpLBcfDPu6wxsU4HMBhYLzQCuR22rkHZZec=,tag:TgAcGU3JoAxqGI0pD48QpA==,type:comment]
+#ENC[AES256_GCM,data:/zWT7Zdc4MdMa8l9U8c38p7leYx/mRoBn8Ehr41kgBUPt18bpsZ8nwhneH8Y9pG4eacDjeJd,iv:Vg0ebflDMm1dzhaSx2OGlPP4/GiLxBcFs1J2ewPwr4k=,tag:WdckE4/G7JLt2NF73lPklQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:gCPFefxMBw==,iv:cBAV6/DjVTio99o3whAscY7pbj3O0a9mlhaDxWqY4H0=,tag:jTlt4sTMsdZhvQXULvPlKA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:cSskyBRirXndlKBBJKtTjGz72hU=,iv:4eeIrA07PwbDkBBg06Ms9cknzWz+dGh+nuA4/gK5a30=,tag:flLCFvVeL4Mapdf/6AYKMw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:zCkZhmQjR0/cJPo=,iv:UZcT8znkXA057n0kbow6uwkINX5JRsXqiZqDkVNNSvM=,tag:VgYB3QAjGezg/HsYSWJ/3g==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:JXVZ5yzDrRlb/HfPYTWy,iv:+9yoo3UnvpQCcCmStm2gn8PaJZghr72AY+w6N0DFFhg=,tag:TAuLzzdwbb1P09fchvQuKw==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:8YjX76Et5NB913Ly8Ul01xlqmYC1gZ7JHA==,iv:3xmSOwM+yRt5ox5D0w0bavf/23QmLCPJWb08cOA7yMU=,tag:x+ZZioW50jplawTt3qwq6Q==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:7AtwD0tOmd9RQSeoQmsCHaLlsKAS18xD,iv:rqizXUUDc2Ls5J1ZJyTRHLo2DGamBDdFNeLQkgBXxt8=,tag:yj5qeye8PLkhHBqSHwx5TQ==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:FlOjMDsCy9z22R2Voi/xMyjj,iv:LAhZ54MP6efehOJ+k+4i7lP/oSsjTw64A/DklWceZCo=,tag:wyzb+a+gIJOtGpwu9E6bIQ==,type:str]
+#ENC[AES256_GCM,data:kjDYgIx3fN0MsIF4D4k=,iv:8kBoLKFsXpFsTOg37RX3zu3rH/lGIdc9d6XX/vnXlbs=,tag:KyIMsd5pEz08541wCzo+iQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:P9Pj3pByRpk+xrLqtg==,iv:lMon43K24NGK9eWub9oBETQ0VDGdI7+/qCP+9ahJR1U=,tag:H+5WBbGBvRdzPZHSqX0TUw==,type:str]
+SVCNET: ENC[AES256_GCM,data:6iEVirk/7gYlJo8Zkg==,iv:bHFQn/MRI/sDfH5o+Yf04pZ2j1EdRxRqJ9SGobPn9w8=,tag:iS222Li+CYyNj60pkC+/ew==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -48,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZOENablNvWUhMUGN6c0JT
-            OCsxdjMxRE1nSnhFcTdrN1JhQjZYNEhiNVNVCjhSMXVCTGRNUHlmVWtKZzJiRnUz
-            OXNsZlhBR3d6SXZQSmlhQ20wUVVkZUEKLS0tIFJFcHluUVdkb2tRRE5PaHVkbEtK
-            TmhNdEhTWFlxcXZwWjBTdlEzdllTeWMKeEoXVQHbAmKsOSgV8kvPjxekAgJqt/LH
-            4mRHJnhu9ARd0N2cMrPbB6UroNYxy7/Uay31Enqx/7dDVNRhx9WfdA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDWW14MXpLMmJSZk9jRlIv
+            UiticHdPNlBYTjJZTmwyMHBGS0hKWS9oOWlNClA0QWhHelZveXdnT0RTVWxueDJJ
+            N295YVkwNHY4MkVFNnp6UFJhSUNxVVEKLS0tIEN3LzRtNG4xTGxGQ3Q4Yi91bm1P
+            aW85bEs3V1VhTzhCTEhYQUlhaEJDZE0Kk8n/NlWBCykqCjKIAp7hJ1rZFfW9RT9j
+            PW9Nb+V0HhUueojZXVn0Uaj9K9UJpOHcczsPNZEBwzqdoZQTmstRPw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T03:35:31Z"
-    mac: ENC[AES256_GCM,data:Y+3z9ZCZkclFKpPR6VZJsuLWV0+5JuAdPUz4w/dkFld0Khq0khxAZbEYMKdOIFD2WphU0JZAbw7/zmXggT31NDwyB43/ec3oMomGbQPiQnHvTaiNTyx5jzQ2qrwYEdFSIYe5VXJ/t8Y1R6FFMiW2HaimZaiG+Sg38Ad8W3Xs9Ck=,iv:2uOzFnq/MfoLE/hDDtcjNXR4/0vxzZ8l7G9baZ89Cek=,tag:mqvgvW80E2LrcW3S2zLXpg==,type:str]
+    lastmodified: "2025-01-09T13:49:30Z"
+    mac: ENC[AES256_GCM,data:6qVmxC5+qRfcDh/z9qOt2kvQPZbkbUzZB/ebFz/UF+bHCGoorHrNqKfenj1Izbw4GYDDh+ocETtPe6SozLdQuxGWdUfZPKILqgbkyKNWUcyXP+G5pgRjDg6dinGYk3mZ520d7baq9lyK+F0VOEA/JIBcTeAXw1HAj4kyD898OuQ=,iv:TJOLGyshn4MuOB461zza4mArxUfibrg2kbk6C/IC928=,tag:2QBmClcA4cPR+bcW4U7yuQ==,type:str]
     pgp: []
     version: 3.9.1
