--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,47 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:lv6ydnM9HDVBOGn/6Phf4GG9GWKwm7ZAPleVpo+M6tY6VB1AEnNO2FYwu7npHgW9EMhUofynHGsLSSHAVB/WL3o=,iv:AfL3twLd97yscoeyQgkD+Qcg4fv2HDuRLefLJugezJM=,tag:A5HWCQ0QM9PK93Z0tBccAw==,type:comment]
-    #ENC[AES256_GCM,data:rQcsxEmkGOIrE4I/HqCpNy1BhKpjF7xqYYu0lyF+UrXLoQuDhhQLchuMeS8=,iv:28vZerUILTtVYExMvSjotJ07WgSrd3iQQ5omS2GiYfw=,tag:l1tpgRdqMO16JX1W5S2deg==,type:comment]
-    VIP: ENC[AES256_GCM,data:ypBg8kjFOFvDJKPHmQ==,iv:KhTreNIF1nvZo+oDOMBJkZwjqjf+M0uZx6rTse2O7b0=,tag:uh5KGWJ9dXfAWna0Rlp/tw==,type:str]
-    #ENC[AES256_GCM,data:2aQwt30h4aG3Y7//wJ4+K9D6MFW/X36Z5qWD,iv:EvfHazK32mSjvLdSikRay96XfJKmI4tdpqN9J9qDMrE=,tag:MjN2tMc6xa1JsFBMNCm82g==,type:comment]
-    #ENC[AES256_GCM,data:3+XMxsd2FYV+/QyjAgXIsB/kLjM1yyjjIDRdq1mqiKzM3zr0+ORf3Lti6PQk46RIzYbLh05emr+zNRQFxwBKMrA50lUo/x4mPdjx+B0Veq90Vp7I35PCuqs=,iv:di/BD3zFkQSL+TObTg3gtYQY9AcO3SfYQpBE8jn4Sps=,tag:C2bizj3W53kZxD0U6UAAbA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:RITl0ha39TOM6ZDz8YQ=,iv:bEQMm9cR1dGbhJoo7ify37xivG1cmY/PIi+f/q1sg/0=,tag:uP4jpQZM2QYje9DNg9Mn/A==,type:str]
-    #ENC[AES256_GCM,data:rImOqpZ0740yPyMYu1oyvELag6fBZZWNpia7QtpsXAjXuA==,iv:qV2xf6PE414grbMRvoq4sOGYMsbHIqaEhHKdVWtT2Zk=,tag:Ho4SgmD29oz5u6IDTN5vIg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:EJU/my8TLr1XTmkQ6w==,iv:LJzyc9EYtIJER8feUMBCiH/FYwtD2vXReqXt8ib0GdA=,tag:8Qn/ilNv7xQi6466Dml/dA==,type:str]
-    #ENC[AES256_GCM,data:Da1th/aL72uTvXa1pvl5m6L4sz/z+GjBrluO5foSG8YS/9N0aaYkJr2NFo0HjyM=,iv:kQl3U3vav/wEWtisxRswnJ4RsTHYY9XPdKFQUlw7xvY=,tag:i+yWyuFk3MDkwbmd8B+HRw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:KV9Rgx3EDbUQqV9KkpkbvuuTq4UEzG2WvllIW51oYA==,iv:EjT+lFcvNGryDwNnUD2ju9JvhdNL+WQghYXWVFaguEA=,tag:ORb/DV8UsKAWrv3UThqZJw==,type:str]
-    #ENC[AES256_GCM,data:Tp3rElzFiCRX5FOc+RakuqO+qgJ5+NQ5LBWqVkIE4TDkbuU04c4Ii/gaEsn5kNV5TOr4OYl6FTwoBkAaXiusq3kLKYwte8I8UpS2oivG5XJKUw==,iv:FBS43ELfwW3xZoz5In7KOidq/V60QVv7DZ+EUr/GcfQ=,tag:1Oc+VzYD6uDubFiIcIgbUw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:8EiqLAkrw2Q3emUWtnC6,iv:wtvONyebMVpYpdLIYHdxG3pidQmEb5O4cfrm7HPdXzs=,tag:NIhZDmkylRdyHmn1FM8/AQ==,type:str]
-    #ENC[AES256_GCM,data:qpYKVmyIYTcRWFsSRUNYiVc7qU+K/DZFNdLlW+j7cAV0,iv:3roORxXs6R/cdSIss26eyoj6HaiB/1igPQuPXfIAFBY=,tag:IAFUh4Ar/9PTS2aLmd139Q==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:5eu7CKAyRcf8AuLPkQGc,iv:M7p1UZBQ+6ak0EzSC0MuPhtz/GjVn+u6EGRiPReSsig=,tag:Qcqa0rEoTmNeCh+/BJFyWg==,type:str]
-    #ENC[AES256_GCM,data:bzvSlqyZkodm33LXmViI7iH7MfAem0D8kzYsfFMTUAk0vDKxTlv1cLUCa9NibCo3pUTlWfDO9d25rO1aJlRzWSCoY80iV4J+EFdAKTzLOso=,iv:MCDq6h9EITVDLd5CGlOEXmvizLrwa7aK1z2/pWqaQV0=,tag:dzwr7vdQoq7tqbLSbNIDkw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:XuE/0ocL1B17F8CmeMLa,iv:4IjHeCPORK/f2YTOtvke17YQPs+xnJuAggsIE1zq97w=,tag:FvJtYABkf1UVgyrDosbWyQ==,type:str]
-    #ENC[AES256_GCM,data:04NG9eY6FRRL8G5PBByI9NqjyJoezDMc8iCglAH4msAa+UK6Das5jEWSUeKcvL+S6vnJU+XgO5kG88I270tkdIT/ULxCX7y1z/8nkAJiONrCyWX3PPG4,iv:e4htPk8jn0l7a/7lDVUAVBgQvxCG9UyG84mOinLnyy8=,tag:KKPBMmauktsq/hy19AMqBg==,type:comment]
-    #ENC[AES256_GCM,data:zLk7r+t9hPsLYfT/JHEXBdWP8lj9E5Ec+378cnRzQxLtou5sdnkPfNdzPWvqhbvLhdObqFH5xe/WkY/kAJSs28IkcXSA8tn18JUNt5wmttR2CzVJjxNMwxfzdfZAUdMRKvKvX8r8WbRys30MeY11ys/WKgpnhd07l3MTVQ==,iv:sSU0b5O091qj/oElaR5wkfQ/icmn/Zjzw9V5I+zeK/Q=,tag:RSds2rEwijtCS2Am0mkgFQ==,type:comment]
-    #ENC[AES256_GCM,data:+IbwdkBzui8PUBSh7NYeY63yOTY7r6GglRHEgMpV0eMgm6lHHqKe7HQUvTnBJW/fTawPOuRaVnrkL/zzFpkT+x8BvW9crfVrORRqYsxEYCc=,iv:ZluAwBUd20bnaibd9b6BECTJ92fwlZyWYI5bRF9H7XY=,tag:jom3YWfhj/JFT5JPm1o1MQ==,type:comment]
-    #ENC[AES256_GCM,data:hY2v+GWpuxJGrtcb2RNUsLuv6HbStH2APlSBJi8E5YZDf7L4j0myhS2aLABOF40MOewcO7PX,iv:HwZ7xDsKyDjgwgpyL1aEK57drZPIDjs3iCCjhcE8rDw=,tag:IPXZQ60szaAUZJ5KhcW2bg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:pw5JCr33BkXOyjfX,iv:esUoY8/22VOQvyXgW5cyXNP6HsY3amsp+cj3kqRFItU=,tag:AWMtKBGkLZLBYj6NDHYfzg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:snOhvU+YjwlWy1ronnA8zGs=,iv:rsAgvXdtUjw8twjimwdrCoSGu2QmKBG+a/kv+CpsVus=,tag:34qsOj90fkE+dpIdPAQzlw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:q0IHfsN65GK3o8p9b94hjcJl6BB50D/MOgQrW3ikUl4=,iv:/2lG8iAc9hOBQKRN5ys5u3lSL7id0EM3+2CEyR62Jk4=,tag:P7WSa8y9Tt/OuARqD/VsUA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:UFcxJshZJLoVjQieIct123esSfMARh3E6vFq0anJRRDfeIbIoUEFlA==,iv:B9BOKK6sL8hCtmQCdO8Z3umV8K4xlE47B9SkewnVsjo=,tag:xs18KoM3j+tfGcIo/ZgtuQ==,type:str]
-    #ENC[AES256_GCM,data:+iXYNtKFg9FybAnhLV0asu2kWYb+R8d8eCbLaKBE4uoyKPZqYHRM/aqL+2UNqwV5uVcspSwhLQHMbMOxjcBcPA==,iv:o/PRXjoCeMV2is1YUcQ/dH2wZSKf5VPcEv0s56Ray0E=,tag:jw5BFvviDg5o55dq16wtoA==,type:comment]
-    #ENC[AES256_GCM,data:LZ4ElyC7rFYzZHa4vMK2dQ+ocejzurzH1v7fxFEVdFpfrHkfALDmNTM41r91o443t64XskBapNQ=,iv:cfPIr31nnb1+QXzzWiu6ztbL2wDIZUgVQ4FLcsvrkEg=,tag:mKII3+LSRxbNrzAQv54m4w==,type:comment]
-    #ENC[AES256_GCM,data:VMxFJ+SAYFrG2qK1qQdkFMU8w+duoDz9lA==,iv:1IZgh3IvYhCj0A4vUPnzHpEqHUqwJ4bKFpqNSmrqgro=,tag:y/evJcK09p936DVZBY9HTw==,type:comment]
-    #ENC[AES256_GCM,data:uuKF3JGUHA4VasYyMQb7PQpUP9SNNYggKPJfKJrYDTyTSSC4lDcHQz++aspBpDTk1LYwJLRTkt83IRMpdKW8wcEmK7/BvRNeQWncPOI=,iv:GOgJxfUKK5Qfh25ZM+qoBR75cDpT0/p/+9oqZdN0WwI=,tag:njjKeiOT5SjCPgxHtDe+NQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ugWyO9gvHosj1KschPa4nf+33HfQLG64PRjUcVcA2yKlBziUPcLog8QqkNyCVYSe,iv:KWc4ZKJpBeQiFliiyh9gYBg8PkZNApH/8JhdNp4mWtA=,tag:c6U5ufBxkb5+VEKVcnPsMQ==,type:str]
-    #ENC[AES256_GCM,data:lp2sWf/qAWeFFHOlh3pIhD17RS97fHZjUofmqax3+UvOEq8Ub+uaQj9WuTO8nPT2vWGRlfH0rHbk+znf3NLFqPSYgswt5O0=,iv:uw40Wl2jlyCwWj6kPpQnHBI0lZMX5r+f1t23Ykvt96c=,tag:JwaU+8Am+fovjKE5aKE+Xg==,type:comment]
-    #ENC[AES256_GCM,data:7T0dQxu/2FvtJ7SUUjVxdtQ+27rzVeu4yqOAyGe9lnrT4g6WeKlU2TY2Cq4uLoA1PyRaAUsF,iv:r3URXWuuu8PksG+jcaXZdGkmHV+yS5qwVhQElR9QTHg=,tag:sm3+e5xvC1BoLDWHKY3c0g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:N2+poq0agg==,iv:CBrkUv4W0tq0ka8T7GS1nxhAvX9jdln4zmIRBtsBdV4=,tag:BgMi5CHF5958hqmm9MZGvA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:qGOZACNPzo5TKIVgafUMGvh7hho=,iv:+LWnxQaO/oLNQduRRrJHse0ZrIY6J2cC95r3BrmhNtk=,tag:QiVNea8HDHgOfnqFq+qCxQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:BSJmDxbb4wCMYHU=,iv:/CEDV8vwFohpZdYc/5IxHroLi5UoUCcSBbqMXX4frYk=,tag:OS8HK9XOxJslkHUsQdJkpw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:OJ2McMZUe8nmhHL45ahZ,iv:knaAyJG0R+DKVCx+LZjeVC40ADdLpUe/6E5fQwWki+o=,tag:0Bro5nPak9dhY8laKwgAsw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:9KC0cKPLhYFvgq8j1bKeKAHag3T/VdIU0g==,iv:Cq4MM3Yde1Bi6PhJ2TrNmPs2ZKlXUEFwqohSs3GC63A=,tag:e6huwRxS/ydhwRRJk4fAjw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:xFTJyp3j89i0wVczTkYWFUIhkcpYU93s,iv:yItzRf8f+K18AKS+Wk25Sf8k3xyj83/pn7oBHI/74/k=,tag:htU5+5pLPJp5pDfMu5HfVQ==,type:str]
-    #ENC[AES256_GCM,data:jYP6pZB5ZjTcCtDaKGE=,iv:sMFNnVQPYpf8vTYY5ANMO8/oDr0vrlh41KuIx3UjgVA=,tag:5FH0I90rfxN6jGuLf3VUnA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:u0KhucCmuWL5vA1QMQ==,iv:Nv1H/4GP7WPfdY1uYuCpw914KUQSCTPdbwD5VxSROCM=,tag:R+XNNCZXKhAgNK7LJ+hJqg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:6+VpU/qzpG47xTxUvg==,iv:1NYg1+7UzL0RESwKaMmCO67T3eqi50/d0dy7U6McSp0=,tag:+Ax/n8YCKiGzaKkTG1r0nA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:siRtvg==,iv:0Cr5UnO6Wm/zA6+vzH5ybXC+glMvy0Be78g5gNakU74=,tag:rpAYiqSNkK0UYgBbb52hMg==,type:str]
+    #ENC[AES256_GCM,data:KxslwX+I24uDhFxRJ6rNBL4/IZOUWsyaZ8oZ4R/8VgqncVwqMYt9j3qw0jTejquvxmcN55jTmtOVK5QMDUwBPlQ=,iv:uKYRMHL6FV97zs83mCyqThRHe/D5JVqwte8zU4PBCaY=,tag:BMMGB/2i9K7lrhlWfVz5rw==,type:comment]
+    #ENC[AES256_GCM,data:FOs5UPsxvMQ912EB7dspkSOqkx7VkLeD9R5H3MrmarEY897G8iQvYod00bQ=,iv:KkA46J6j70JjUoTBsZmlauiG+sMwskB9WCzCX8ykX1U=,tag:B4iH29oBzueu/ztbj95YTg==,type:comment]
+    VIP: ENC[AES256_GCM,data:KJs1Mef615ri3vmoSQ==,iv:Ioy98lAeAUC8P8I8lu4otrhiUy16laLQOw4KevkUFdk=,tag:BGecckYSiP4powxUgMnpKg==,type:str]
+    #ENC[AES256_GCM,data:lJf0QUeWTKIQnIRMcSbKA0Pn2ipla1uwzn5A,iv:dG7ecYQZPiRW4GVv9W3o8arePVeKY0lVpmJ6X1AF6O0=,tag:v4H+C48fCPVGhZ4nkUW8Eg==,type:comment]
+    #ENC[AES256_GCM,data:EuCafOBXrw99Od2RM5xzq8VzbpJnIGE3YuppF6gZMS1hok9PvK4IvKYr1fQokbZf4ZeFwT3/256L34xWyHG/mUlKNKl5R0zonAxV7BppyTqvpot8/Z0SNgU=,iv:6633IBXxU52VWyHkg9RqSXyRNjWoK8vPfcgSwCdtvns=,tag:tAny8KlqXBdsG1msYbdEpw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:y/9hv6yvCvMI1WSBY4Q=,iv:Jqp2SWdkWEuCVYRq7e5EigFm6HkXLNy/9sLisNfDdWQ=,tag:LOCy502khe9dMHhCKRbHKw==,type:str]
+    #ENC[AES256_GCM,data:4J1l7ctjrEXOU1Zgn6u4JpMATTw1LBD804drh5Fn+HgTbw==,iv:zZMITSqu4hLVqnKSZ0SgUJdVhgdyijC7TMImpSHp6Do=,tag:7vylytCQlStxDVriu8BISQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:N74x4oHdl2xlCFHFNw==,iv:atboUA1LSN7GLBTMv+MfL8rZA5jifXbd9dssT9ASRYc=,tag:7T/nx620NJ6SX9u6yXfKxw==,type:str]
+    #ENC[AES256_GCM,data:sc0vSodriz6OlggZOAL2JiQc8SkksjbkPgSsvkiQ/tM5LUW5wvdDaZRziKLK4oU=,iv:/5Ik0pA8VTskLpidZIE4mFo8Xu7DC2X/UqsaidLloG8=,tag:j/Y7aVEkE4hcMcAqEGiUzA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:a1wE3gm4nSXkvVDuGy53oUEB93QzqORGUlNz8oGDvg==,iv:Xz6ZJoqp33l4QFPxeWQaJqKpvgnQr//PfRpfCDzOAxY=,tag:w84aWuoUYenkhQpFMX8nNg==,type:str]
+    #ENC[AES256_GCM,data:y3qwFlOzSpGwOGmHTouav90zw0b1K/7RpVG82QqZm1xKkAW8GGjXUXztMBZK7sVMZw9p3r8HqErLTHgO2qgGrRa7vUqNadWYrqI9HH8hOX9/mg==,iv:SMO0R8b6TeKRy58zy3y1+T4iGnvvJmylI8YK0fk4IuY=,tag:eXbpt+3Z5rm7E7sR3CxJ4w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:UHhXIWkaIhorvqQKyhgz,iv:+PO8mrdgTR9VBVkuHfPqXoI5hUepVbg03i6yo+xeAxU=,tag:bOkc8YDsJTO2in327fWD+A==,type:str]
+    #ENC[AES256_GCM,data:h+TjbmIOstzuA9A5pymSzhtWHMslBS1/mys3u/LiW0zs,iv:2z4Chl60h6rGTA7N6cI5TqY0tuQt1Q5oeFOYJOUHf8E=,tag:0omLgIQzi9Awe1xNjKJlRw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:k76L03OV2Br2xG3YiEqI,iv:TvN9IaXQcBpAf/LymHH7R1U5a4NBbOGd38pLuzciJPY=,tag:6fKbtbr3MFte2jORR5Q9LA==,type:str]
+    #ENC[AES256_GCM,data:RKc9J6TJFAX3emEczgf23BtoZd7EQQhn6mm2Qr0T83zyHld3e0Klg/SaGn0es7ZgNg7JzuEqlcNdoimPDR7BmDecu/sZgLhD+MGXTawx5JM=,iv:biM7Uz5SUECuBZrjggZBcozEE+PuQ86uqrsLndgh7MA=,tag:8A2daezNmWjJOHZkbxbyTw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:wgpQkWREUAjd5GTjboKt,iv:L+h516KIdvlAZFwb8xydq+Z8UCorpfvIL408rIzEy+g=,tag:0mopyIp3h7ddXBXGhousvA==,type:str]
+    #ENC[AES256_GCM,data:xLRf9nP51B1kHdl4JJSx89RlCIEAEUeK9KehA+eLly6hKAXhOEmWjqaQsX3sGSd6fey+Ornl9k4ndDobsNT2AU/IRL/Cl4pHD4WY0myH9ozebztE48ji,iv:QpUywx3+bz8yfo/e9xWOvEZz0s2p9wV2hFcGW9bhRYU=,tag:M+D1w1kEDoxUYXEBMbt5NA==,type:comment]
+    #ENC[AES256_GCM,data:tkO76BxiSgIK0Vf7YLv6mCdfRCSJ73vxXaL0GIc/+uKr7wSKXgGIm8AkCiGqxTd7cqclF1eeh0ugxGr2viA4Jfa68W1Hq5JcRUVbnfLgbB5zTS2ndMUmSg3OuvQrIuzVfywV5glu+agDqgkTKfEcLLE1ASTjQVigyFa46w==,iv:abF6WR0SmPUN/Rii/IHYVhC1nyW7jj2AeLqkJzt37Tw=,tag:y+hG0RQ7l1ryK5EUoZ9RnA==,type:comment]
+    #ENC[AES256_GCM,data:8Q5nfc/5MXEV/iIZc1Kr3FVOCDO1piMUbwYXXYNKwSWWrKTkwDM8zzQyHPvVpWt8AVkiWAQOMQf5k2Gc5QMi7hi27h6pmxBjA9HlZJUHDBE=,iv:gdobSQHvbKHPgMsHJVsNF7wTFEyGG9kVdTBgWqbk8xs=,tag:TftthE+g2EeR1mGY+jBHcA==,type:comment]
+    #ENC[AES256_GCM,data:+rPIUOlFFjIOLMUT7Ka70EAHiRpVPFx4Luskr7Oe8zFtxvvCX665B7NcMLt9Z8j7459NICmp,iv:66q25q8t8Z7jQ6yllB3HhHk8tdvu7PfKI2hEnlH1X+Q=,tag:lWt/X40oBfZYqsU6HYWtLQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:l6cbC4m3yp0+FwDY,iv:ivV7mfDptRt4LLkih3iM7KFjV+qGK1JQN2bep8n2S1Y=,tag:d95u0Xn0yMF7HIvSVaZ4qA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:jevMOS3hAcZCub7UWy8uxnY=,iv:e2pdNzVu0dVOXRZOP2FrqePJNvq4A9BPLd5V5O5crWY=,tag:nwnyN9iWib7x0NSzQBL7qA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:nHLxFJ475wCuobSLDW1NW6ZVcSYMVF8V088LaDpQFo0=,iv:855ACriniEH57r4qd2lstgBJWRCweMyBfTIRyqCfZA4=,tag:oHOWu8aJ2vDYaYR0mTdcUg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ROQcVaskLVE9ErrNRtvcujIJzIag7oObEErhj6TABsgMf1pMMbFONw==,iv:nX7mANOh0RvMrAzi639OEUC1ISPXK9YhfWtac7MBkVc=,tag:B8AwUBqtKxwaW3ChNhXKKQ==,type:str]
+    #ENC[AES256_GCM,data:EfttqowzNLkPfCY+4qruAeuDGkeWUL/JGzlATGhzsm8RnY1taI0XhaQkfjVr4oe+JUY8OLVZfFQ8JR27iDTtsg==,iv:WT2zrRT4L1tfA20p6lGxAAnc6HRxIZc2zkx2S40kBLg=,tag:K3fUO/0m+r7XOL09yTcsJA==,type:comment]
+    #ENC[AES256_GCM,data:seSsoaJMrbBW7NVftxNaUKdgTo9VllMvZ5yWz5srqcgW/mITB23BZ4UjaYz2jdIxpK7oLKvepYQ=,iv:C4HLAUJyu31OvaeGawhXpFtcc/JmVYPy5sI2+PCUL+s=,tag:28fndSQlKlnyfWlcKxQoPg==,type:comment]
+    #ENC[AES256_GCM,data:H8vtgfuZO1vg5/8s/GcHcDhE4nyY+dqCyg==,iv:hrtLhUQeXBUyLT6Emx1uv2eVHf1qnBmMYdQIqhFRF+0=,tag:p+8YXN28rlOLWnqSNXKu/g==,type:comment]
+    #ENC[AES256_GCM,data:fnw1jrBGFBOltWLmGVfjQkHEJJFh0co9OqXmiznecVf7Es88Ijm9zPvT4leLZ1E++bexrZKlARKzVksKetwhlcItTSY8e7uigNrRZNo=,iv:2edFF6vLBhI0y+ZEyHs1pwMf+pSatOSbb37uEia9ao0=,tag:N8R/hkopmE0PxM6Hne0Mow==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:MHaoKZ16I0FmjEJN+2VxCE0tmqh8H4yDphipGo6Jlyj4+fpENrFzC51SZh7BOF/0,iv:CTdzcObAplYP4PCIPxGIhtqCyU5m8tMTWQZ/mJcP4iA=,tag:G2Ei6tF8hvXPJ4B/oSzZ0A==,type:str]
+    #ENC[AES256_GCM,data:X7FJ2i7GpEW800P2JytvatgziogSEOhpAtN49Fopeiw5nQFuil0sgEziavPuck6AlUM8GrckrkUOINrdMxuYYavc1wv0tz8=,iv:D9JRx7oMsfmNB0J6OwZ6+/zjeelHG9KsF59DTd48F4s=,tag:c07gjp4PPVFuQ8HKcvjXyA==,type:comment]
+    #ENC[AES256_GCM,data:IlIc5GUjumsc0qJM9epJ9cMreZE1GsOIB5dC/gZ8HNHy+abZfM6+jukIGR6mMdq3/s1iUN1C,iv:lCWZRJyYNiWed//p3AjR3ms6mLVROI+IUKC0ksmS9rk=,tag:C38ra1VMBMfSFI/Cc7pTPQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:8Wx9V4Ds7Q==,iv:BCeDrOeBY+HjHskCifoPkmP9mHC99VzmAoQjlHFH1Ms=,tag:Jt3zH4Pref/VuevTgdU0eQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Mg4ySPO9tt23YkzR17lQ72opY5I=,iv:4GKGr90nWdwsIeLstNgiHBW+k80YklM30w2itpAVJP4=,tag:zSgF/OXi+D1Br8xjsUg5Dg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:t+AzZ5WnLszQYrI=,iv:4KLYmIcYzVANx0uEmWhYQZv+P22XBzPJSduB5+GdxSw=,tag:f2BxHA1hC8duUChRnxm6hw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:wgxN7l2gSHQlwCQQJvmU,iv:INPVxSmf6/p0GldmljqPoN2FD4300qziMqKG/Wkkm+I=,tag:iHDcZ3hthRY/m/MNeMrBrQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:JXa6VUjf5wCbu6/gZAEgT1O4PrH7ldCexA==,iv:vYPq1XyVMALLtrHq8z7zfqqIV3jKMGVtYRF7ZpSbrnw=,tag:RrLaI4QGAiUsdbrFiLubcg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2GP/4Tjxe9k5uCwGQOuUiuyO7Phzrp6E,iv:A+KlOSbcp5W+xKa5NyAdrmSBytJy8vqzt1uxlOEJZcw=,tag:Y3LYGjvvX+hbXNmmCGxhdA==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:7mqshm0MV2+l4oQ/KFlEF4FK,iv:3wqsx9exNzWFmwUdCKZ0VIUi+PJgKvx0XIkIHeQOUUI=,tag:fjemTAGfh7ND8z6ySllQmA==,type:str]
+    #ENC[AES256_GCM,data:6xPHxYdsQrsHJQKA0d0=,iv:myq16MdDx/D3cNxmyWzAH7T4NaHKRkdjnXJsHSR4vtY=,tag:UPak1XGKJ//y1bEva81EBQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:su0UJctxNm8TTgX1ow==,iv:5f9rHUG8wnZXgOmLGJdUayroywzG5b/+7B8M19hGCG0=,tag:3xkOn2NHVKXKHnFU4ivgzw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ff/clkBaWT5uflAotA==,iv:QIJIgm3t3WvNCplUaOhnKovLloTUO2egyYM10Vvgsa0=,tag:Zhd4JzmAIk26nXnaz3OTMQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:wVJ79Q==,iv:cTA5xyubVzOiSXwHCXLJJvI4UPZVx68rlOCKYcokRTo=,tag:Qq9GUfp4fK8CNIhEja7LNQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -55,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWSnBGc2EyR2g5TjJUSHJL
-            WmdaUVlsWWppL29xQXRWUk8xODlndmF1RkhrCnUvL3hTbEZsYVRlbzlIZnJSSGxh
-            UEoxbXZWVmhjOWRDdEpnOUZ2ei9YMlEKLS0tIHF5ZFNSeEIyUWNCb2g3ejU5b01U
-            OUFZYzFNQk1yY2h4MlQ3N1VIb3Iwd2MKSlu0hdfUY55BZY/sxn48kvkuGeamj89w
-            C4i164SqncexJmofNF/H76aGEgmsafGFFQ6VvMVj4K84oBAw/PDZyA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKbVdNZWFiS0JPOXg3M2dJ
+            dkcrSjZyc1EzTWJreGt2RUs4VHR5L2ZUQXkwCjgxYjRXU0JGVk1oUnBtaHNJY3ho
+            azlSaWtNVFFJNy9jdGFrTGVSby83TkEKLS0tIEF6NVc0M1hxMXVQSGVReGVxcVNW
+            Z09TWjdsaC8rYm5qRjBLNEUyTHhJM1UKJk+OMGhZaa89MDfE0QBUgbVak9ZqtW1x
+            bnhcODpwa7lr1DRIzeRuK+vNfJi4//eyMXDWglcJsgUm9gKqReDM0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T03:35:31Z"
-    mac: ENC[AES256_GCM,data:A6tTCGzbr8TolZrFH3kD0vrcGX0vQtiAe3Nmc2w9Vmq49ccjCHyAQaCAl2CSszKFaL0umG4R8Hn4QdVXKuNh5E0M2gwTjvtqTMYxFk8wpYU9wQ/GDcuqrEKptLX2A3LvT/S3Fm++lOLjeMRCvkXJ1QwO8a6zx0ZvP2/nSc2ZtDs=,iv:a8bUjHAPZFedvxqfL5t1xWE3HgfdroMAyVDvqOcpxkA=,tag:naHKxiF7J4034ThuS7tHeg==,type:str]
+    lastmodified: "2025-01-09T13:49:30Z"
+    mac: ENC[AES256_GCM,data:mQHdJv+TkCGAF5SS6EAuXgxFVz//AR6HevCcaF6cehCc85FLkEhk+8gifRzJZ0xTZhap/rUSIPrRFwtaSIZ8AXTR7v7p+PADdvRsrAUNhM9E899dlj/qrp/8kFUGiIVswezmPRw1OWA06MkoYFbtVh35y9GiaWmCs84XTV+BGO4=,iv:CdUsTppYWwo1vj9/g0cwUSmhlkMHl4YouUDLmNbU6BY=,tag:ppTrC77PTmAhlFRd2GYC1Q==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
